# computer_vision_robot_skills_tfg

./: README.md
computer_vision/install/: local_setup.sh  setup.sh
computer_vision/install/gesture_recognition_pkg/lib/gesture_recognition_pkg/: vision_node
computer_vision/install/gesture_recognition_pkg/share/gesture_recognition_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml
computer_vision/install/turtlebot_control_pkg/share/turtlebot_control_pkg/: package.bash  package.dsv  package.sh  package.xml
computer_vision/log/: latest_build
computer_vision/src/gesture_recognition_pkg/: package.xml  setup.py
computer_vision/src/gesture_recognition_pkg/gesture_recognition_pkg/: vision_node.py
computer_vision/src/turtlebot_control_pkg/: package.xml  setup.py
computer_vision/src/turtlebot_control_pkg/turtlebot_control_pkg/: control_node.py
heuristic_version/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
heuristic_version/install/gesture_recognition_pkg/share/gesture_recognition_pkg/: package.sh  package.xml  package.zsh
heuristic_version/install/turtlebot_control_pkg/lib/turtlebot_control_pkg/: control_node
heuristic_version/log/: latest_build
heuristic_version/src/gesture_recognition_pkg/: setup.cfg  setup.py
heuristic_version/src/gesture_recognition_pkg/gesture_recognition_pkg/: vision_node.py
heuristic_version/src/turtlebot_control_pkg/: setup.cfg
heuristic_version/src/turtlebot_control_pkg/turtlebot_control_pkg/: control_node.py
train_model/: Train.ipynb
(+5 files in other folders)
